[package]
name = "oki-transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
rand = "0.8.5"
rust-crypto = "0.2.36"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
