[package]
name = "oki-transaction"
authors = ["okinai <okinaijap@gmail.com>"]
description = "The Rust open-source protocol for bank transations"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "okitransaction"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.31"
hex = "0.4.3"
pbkdf2 = "0.12.2"
rand = "0.8.5"
rust-crypto = "0.2.36"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10.8"
